crates/tracel-mlir-rs/src/dialect/snapshots/mlir_rs__dialect__arith__tests__arith.bitcast.snap
---
source: crates/mlir-rs/src/dialect/arith.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: i64) -> f64 {
    %0 = arith.bitcast %arg0 : i64 to f64
    return %0 : f64
  }
}
