crates/tracel-mlir-rs/src/dialect/snapshots/mlir_rs__dialect__arith__tests__arith.extsi.snap
---
source: crates/mlir-rs/src/dialect/arith.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: i32) -> i64 {
    %0 = arith.extsi %arg0 : i32 to i64
    return %0 : i64
  }
}
