crates/tracel-mlir-rs/src/dialect/snapshots/mlir_rs__dialect__arith__tests__arith.fptoui.snap
---
source: crates/mlir-rs/src/dialect/arith.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: f32) -> i64 {
    %0 = arith.fptoui %arg0 : f32 to i64
    return %0 : i64
  }
}
