crates/tracel-mlir-rs/src/dialect/snapshots/mlir_rs__dialect__arith__tests__arith.index_cast.snap
---
source: crates/mlir-rs/src/dialect/arith.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: index) -> i64 {
    %0 = arith.index_cast %arg0 : index to i64
    return %0 : i64
  }
}
